--- a/auth/client/index.html
+++ b/auth/client/index.html
@@ -1,8 +1,16 @@
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"
+  />
+  <link
+    href="http://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
   <style>
-    .errors { color: red; }
+    .errors {
+      color: red;
+    }
   </style>
 </head>
 <body>
